Card Layout Setup

--- a/index.html
+++ b/index.html
@@ -26,81 +26,109 @@
       <article class="card card--profile">
         <div class="card__header">
           <div>
-            <img src="" alt="" />
+            <img src="./images/image-jeremy.png" alt="Jeremy Profile Picture" />
           </div>
-          <p></p>
-          <p></p>
+          <div class="card__intro">
+            <p>Report for</p>
+            <p>Jeremy Robson</p>
+          </div>
         </div>
         <div class="card__links">
-          <!-- <button></button>
-          <button></button>
-          <button></button> -->
+          <button>Daily</button>
+          <button>Weekly</button>
+          <button>Monthly</button>
         </div>
       </article>
       <article class="card card--work">
-        <div class="card__title">
-          <p></p>
-          <p></p>
-        </div>
-        <div class="card__description">
-          <p></p>
-          <p></p>
+        <img class="card__img" src="./images/icon-work.svg" alt="briefcase" />
+        <div class="card__layout">
+          <div class="card__title">
+            <p>Work</p>
+            <img src="./images/icon-ellipsis.svg" alt="" />
+          </div>
+          <div class="card__description">
+            <p>5hrs</p>
+            <p>Previous - 7hrs</p>
+          </div>
         </div>
       </article>
       <article class="card card--play">
-        <div class="card__title">
-          <p></p>
-          <p></p>
-        </div>
-        <div class="card__description">
-          <p></p>
-          <p></p>
+        <img class="card__img" src="./images/icon-play.svg" alt="briefcase" />
+        <div class="card__layout">
+          <div class="card__title">
+            <p></p>
+            <p></p>
+          </div>
+          <div class="card__description">
+            <p></p>
+            <p></p>
+          </div>
         </div>
       </article>
       <article class="card card--study">
-        <div class="card__title">
-          <p></p>
-          <p></p>
-        </div>
-        <div class="card__description">
-          <p></p>
-          <p></p>
+        <img class="card__img" src="./images/icon-study.svg" alt="briefcase" />
+        <div class="card__layout">
+          <div class="card__title">
+            <p></p>
+            <p></p>
+          </div>
+          <div class="card__description">
+            <p></p>
+            <p></p>
+          </div>
         </div>
       </article>
       <article class="card card--exercise">
-        <div class="card__title">
-          <p></p>
-          <p></p>
-        </div>
-        <div class="card__description">
-          <p></p>
-          <p></p>
+        <img
+          class="card__img"
+          src="./images/icon-exercise.svg"
+          alt="briefcase"
+        />
+        <div class="card__layout">
+          <div class="card__title">
+            <p></p>
+            <p></p>
+          </div>
+          <div class="card__description">
+            <p></p>
+            <p></p>
+          </div>
         </div>
       </article>
       <article class="card card--social">
-        <div class="card__title">
-          <p></p>
-          <p></p>
-        </div>
-        <div class="card__description">
-          <p></p>
-          <p></p>
+        <img class="card__img" src="./images/icon-social.svg" alt="briefcase" />
+        <div class="card__layout">
+          <div class="card__title">
+            <p></p>
+            <p></p>
+          </div>
+          <div class="card__description">
+            <p></p>
+            <p></p>
+          </div>
         </div>
       </article>
       <article class="card card--selfcare">
-        <div class="card__title">
-          <p></p>
-          <p></p>
-        </div>
-        <div class="card__description">
-          <p></p>
-          <p></p>
+        <img
+          class="card__img"
+          src="./images/icon-self-care.svg"
+          alt="briefcase"
+        />
+        <div class="card__layout">
+          <div class="card__title">
+            <p></p>
+            <p></p>
+          </div>
+          <div class="card__description">
+            <p></p>
+            <p></p>
+          </div>
         </div>
       </article>
     </main>
-    <!-- Report for Jeremy Robson Daily Weekly Monthly Work 5hrs -->
+    <!--   -->
     <!-- daily -->
-    <!-- Previous - 7hrs -->
+    <!--  -->
     <!-- daily -->
     <!-- 32hrs -->
     <!-- weekly -->
