--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
+    <script src="./main.js" defer></script>
   </head>
   <body>
     <main class="grid">
@@ -34,47 +35,55 @@
           </div>
         </div>
         <div class="card__links">
-          <button>Daily</button>
-          <button>Weekly</button>
-          <button>Monthly</button>
+          <button id="daily" class="active">Daily</button>
+          <button id="weekly">Weekly</button>
+          <button id="monthly">Monthly</button>
         </div>
       </article>
       <article class="card card--work">
-        <img class="card__img" src="./images/icon-work.svg" alt="briefcase" />
+        <img
+          class="card__img"
+          src="./images/icon-work.svg"
+          alt="briefcase icon"
+        />
         <div class="card__layout">
           <div class="card__title">
-            <p>Work</p>
+            <p></p>
             <img src="./images/icon-ellipsis.svg" alt="" />
           </div>
           <div class="card__description">
-            <p>5hrs</p>
-            <p>Previous - 7hrs</p>
+            <p class="description__current"></p>
+            <p class="description__previous"></p>
           </div>
         </div>
       </article>
       <article class="card card--play">
-        <img class="card__img" src="./images/icon-play.svg" alt="briefcase" />
+        <img
+          class="card__img"
+          src="./images/icon-play.svg"
+          alt="gamepad icon"
+        />
         <div class="card__layout">
           <div class="card__title">
             <p></p>
-            <p></p>
+            <img src="./images/icon-ellipsis.svg" alt="" />
           </div>
           <div class="card__description">
-            <p></p>
-            <p></p>
+            <p class="description__current"></p>
+            <p class="description__previous"></p>
           </div>
         </div>
       </article>
       <article class="card card--study">
-        <img class="card__img" src="./images/icon-study.svg" alt="briefcase" />
+        <img class="card__img" src="./images/icon-study.svg" alt="book icon" />
         <div class="card__layout">
           <div class="card__title">
             <p></p>
-            <p></p>
+            <img src="./images/icon-ellipsis.svg" alt="" />
           </div>
           <div class="card__description">
-            <p></p>
-            <p></p>
+            <p class="description__current"></p>
+            <p class="description__previous"></p>
           </div>
         </div>
       </article>
@@ -82,29 +91,33 @@
         <img
           class="card__img"
           src="./images/icon-exercise.svg"
-          alt="briefcase"
+          alt="body icon"
         />
         <div class="card__layout">
           <div class="card__title">
             <p></p>
-            <p></p>
+            <img src="./images/icon-ellipsis.svg" alt="" />
           </div>
-          <div class="card__description">
-            <p></p>
-            <p></p>
+          <div class="card__description" data-card="W">
+            <p class="description__current"></p>
+            <p class="description__previous"></p>
           </div>
         </div>
       </article>
       <article class="card card--social">
-        <img class="card__img" src="./images/icon-social.svg" alt="briefcase" />
+        <img
+          class="card__img"
+          src="./images/icon-social.svg"
+          alt="chat bubble icon"
+        />
         <div class="card__layout">
           <div class="card__title">
             <p></p>
-            <p></p>
+            <img src="./images/icon-ellipsis.svg" alt="" />
           </div>
           <div class="card__description">
-            <p></p>
-            <p></p>
+            <p class="description__current"></p>
+            <p class="description__previous"></p>
           </div>
         </div>
       </article>
@@ -112,16 +125,16 @@
         <img
           class="card__img"
           src="./images/icon-self-care.svg"
-          alt="briefcase"
+          alt="health heart icon"
         />
         <div class="card__layout">
           <div class="card__title">
             <p></p>
-            <p></p>
+            <img src="./images/icon-ellipsis.svg" alt="" />
           </div>
           <div class="card__description">
-            <p></p>
-            <p></p>
+            <p class="description__current"></p>
+            <p class="description__previous"></p>
           </div>
         </div>
       </article>
